tests/ui/vis.rs
#[derive(partial_config::HasPartial)]
pub(crate) struct ConfigurationWarn {

}

fn main() {}
